@@ -23,6 +23,18 @@ if ( isset($_POST['unfreeze']) ) {
 	        WHERE cid = %i', now(), now(), $docid);
 }
 
+if ( isset($_GET['edited']) ) {
+
+	echo addForm('refresh_cache.php', 'get') .
+            msgbox (
+                "Warning: Refresh scoreboard cache",
+		"After changing contest times, it may be necessary to recalculate the cached scoreboards.<br /><br />" .
+		addSubmit('recalculate caches now') 
+		) .
+		addEndForm();
+
+}
+
 // Get data. Starttime seems most logical sort criterion.
 $res = $DB->q('TABLE SELECT * FROM contest ORDER BY starttime DESC');
 
