@@ -5,6 +5,7 @@ Version 3.2.0 - SVN
  - Fix displaying scorerow on teampage also for invisible teams.
  - Examples suggest secure LDAPS protocol instead of LDAP.
  - Fix bug with language extension in uploading problem zipfiles.
+ - Warn to recalculate scoreboard cache after contesttime changes.
 
 Version 3.2.0RC1 - 27 August 2011
 ---------------------------------
